# FREEkMapper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish_pypi.yml
src/freakmapper/: control_panel.py  main.py  renderers.py  sequence_setup.py
src/freakmapper/shaders/: fragment.glsl  vertex.glsl
src/freekmapper/: engine.py  main.py  media_loader.py  renderers.py  repro_texture.py  repro_texture_dpg.py  surface.py  video_source.py
