[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freekmapper"
version = "0.1.4"
description = "A projection mapping application using PyOpenGL and Tkinter"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Vishal Rajendra Kumar"},
]
dependencies = [
    "moderngl",
    "glfw",
    "dearpygui",
    "opencv-python",
    "numpy",
    "Pillow",
    "sv-ttk",
    "pyopengltk",
]

[project.scripts]
freekmapper = "freekmapper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
